fixed the transition button on mobile

--- a/portfolio/src/components/home/App.css
+++ b/portfolio/src/components/home/App.css
@@ -244,6 +244,7 @@ nav{
     margin-top: 1rem !important;
     color: black !important;
     background-color: white !important;
+    border: 1px solid black !important;
   }
   .description{
     margin-bottom: 0 !important;
